# Unit-Test-Generator

./: CLEANUP_COMPLETE.md  FINAL_SUMMARY.md  README.md  README_SIMPLIFIED.md  STATUS_UPDATE.md  debug_run.py  dev-tracking.txt  instructions.md  pom.xml  pyproject.toml  requirements-simplified.txt  requirements.txt  simple_cli.py  test_calculator.py  test_test_calculator.py
app/: ai_caller.py  cover_agent.py  cover_agent_backup.py  cover_agent_fixed.py  coverage_processor.py  database.py  lsp_context_extractor.py  main.py  prompt_builder.py  runner.py  unit_test_generator.py  unit_test_validator.py
app/abstract/: prompt_builder_abc.py
app/config/: config_schema.py
app/logging/: custom_logger.py
app/lsp/scripts/: main.py
app/utility/: utils.py
config/: Runner.py
llm-handler/: AICaller.py
llm_handler/: PromptBuilder.py
src/: Orchestrator.py  main.py  unit_test_gen.py  unit_test_producer.py
src/llm_handler/: prompt_builder.py
src/main/cpp/llama/: llama_jni.c
src/main/java/ugen/org/ugen/: UgenApplication.java
src/main/java/ugen/org/ugen/config/: LLMConfig.java
src/main/java/ugen/org/ugen/llm/: LLMFactroy.java  LLMProvider.java  LlamaProvider.java  OpenAIProvider.java
src/main/java/ugen/org/ugen/plugin/: CoverAgent.java  CoverAgentBuilder.java  ModelPrompter.java
src/main/java/ugen/org/ugen/utils/: DependencyHelper.java  FileUtils.java  ProcessUtils.java
src/main/resources/: application.properties
src/test/java/ugen/org/ugen/: UgenApplicationTests.java
tests/: test_AICaller.py  test_PromptBuilder.py  test_runner.py
utils/: Logger.py
(+27 files in other folders)
