[project]
name = "u-gen"
version = "0.1.0"
description = ""
authors = [
    {name = "raed"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dynaconf (>=3.2.10,<4.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
